--- a/shixun02/src/main/webapp/login.html
+++ b/shixun02/src/main/webapp/login.html
@@ -232,7 +232,7 @@
                 $('#studentAgeP').html('限制年龄范围:0~120');
                 ageFlag=false;
             }
-            $('#studentNameP').html('');
+            $('#studentAgeP').html('');
             ageFlag=true;
         });
     </script>
